--- a/NectarTest/Cells/HiveListTableViewCell.xib
+++ b/NectarTest/Cells/HiveListTableViewCell.xib
@@ -9,22 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="HiveListTableViewCell" customModule="NectarTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="524" height="121"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HiveListTableViewCell" rowHeight="143" id="KGk-i7-Jjw" customClass="HiveListTableViewCell" customModule="NectarTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="524" height="143"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="524" height="121"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="524" height="143"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Hy-Jv-Uqr">
-                        <rect key="frame" x="8" y="8" width="200" height="100"/>
+                        <rect key="frame" x="8" y="8" width="160" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="RsR-wP-vNS"/>
-                            <constraint firstAttribute="height" constant="100" id="Z58-x9-w1U"/>
+                            <constraint firstAttribute="height" constant="120" id="8tv-XU-qwO"/>
+                            <constraint firstAttribute="width" constant="160" id="R4l-sz-IeF"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWj-p0-Ny4">
-                        <rect key="frame" x="232" y="50" width="268" height="21"/>
+                        <rect key="frame" x="192" y="61.5" width="308" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -32,10 +32,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="WWj-p0-Ny4" secondAttribute="trailing" constant="24" id="FEK-e0-UUt"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7Hy-Jv-Uqr" secondAttribute="bottom" constant="8" id="XSU-4L-LV1"/>
                     <constraint firstItem="7Hy-Jv-Uqr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Xg5-es-IqH"/>
                     <constraint firstItem="7Hy-Jv-Uqr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="i2G-B1-E4F"/>
                     <constraint firstItem="WWj-p0-Ny4" firstAttribute="leading" secondItem="7Hy-Jv-Uqr" secondAttribute="trailing" constant="24" id="pKe-cn-QYQ"/>
-                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="7Hy-Jv-Uqr" secondAttribute="bottom" constant="8" id="uTQ-l7-7me"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -46,7 +46,7 @@
                 <outlet property="iconImageView" destination="7Hy-Jv-Uqr" id="rxL-ao-509"/>
                 <outlet property="nameLabel" destination="WWj-p0-Ny4" id="AMU-ku-jnt"/>
             </connections>
-            <point key="canvasLocation" x="317.39130434782612" y="162.38839285714286"/>
+            <point key="canvasLocation" x="317.39130434782612" y="169.75446428571428"/>
         </tableViewCell>
     </objects>
 </document>
