Added detailed hive view

--- a/NectarTest/Storyboards/Base.lproj/Main.storyboard
+++ b/NectarTest/Storyboards/Base.lproj/Main.storyboard
@@ -35,6 +35,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ufG-9V-8Ih">
                                 <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <sections/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="WAC-Ym-QKU"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="iUR-cs-0YV"/>
